--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body> 
    
-<h1>Busqueda personalizada en Datatables 2020</h1>
+<h1>Busqueda personalizada en Datatables Febrero 2020</h1>
 
     <div>
         <label>Busqueda:</label>
